test/corpus/action.txt
============================================================================+++
Parser Test Action
============================================================================+++
#  Copyright 2021 Open Source Robotics Foundation, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
# Taken from:
#   https://github.com/ros2/rosidl/blob/rolling/rosidl_adapter/test/data/action/Test.action
# goal definition
# foo

# bar
bool bool_value
# baz
byte byte_value
# asd
char char_value  # bsd
float32 float32_value
float64 float64_value
int8 int8_value
uint8 uint8_value
int16 int16_value
uint16 uint16_value
int32 int32_value
uint32 uint32_value
int64 int64_value
uint64 uint64_value
string string_value
---
# result definition

# ok docs
bool ok

@optional
bool optional_bool
---
# feedback definition
# more

# sequence docs
int32[] sequence

----------------------------------------------------------------------------+++
(source_file
  ; LICENSE
  (comment) (comment) (comment) (comment) (comment)
  (comment) (comment) (comment) (comment) (comment)
  (comment) (comment) (comment) (comment) (comment)
  ; Start
  (comment)
  (comment)
  (comment)
  (action
    (goal
      (field type: (primitive_type) name: (identifier))
      (comment)
      (field type: (primitive_type) name: (identifier))
      (comment)
      (field type: (primitive_type) name: (identifier))
      (comment)
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type (string_type)) name: (identifier)))
    (separator)
    (comment)
    (comment)
    (result
      (field type: (primitive_type) name: (identifier))
      (field (annotation) type: (primitive_type) name: (identifier)))
    (separator)
    (comment)
    (comment)
    (comment)
    (feedback
      (field type: (primitive_type) type: (array) name: (identifier)))))

============================================================================+++
Action with a lot of Integers
============================================================================+++

int16 number

int16 decimal_field 10
int16 decimal_field_neg -10

# Binary
int16 binary_field 0b1010
int16 binary_field_neg -0b1010
int16 binary_field_alt 0B1010
int16 binary_field_alt_neg -0B1010

# Hexadecimal
int16 hexadecimal_field 0xA
int16 hexadecimal_field_neg -0xA
int16 hexadecimal_field_alt1 0Xa
int16 hexadecimal_field_alt2 0xa
int16 hexadecimal_field_alt3 0XA
int16 hexadecimal_field_alt1_neg -0Xa
int16 hexadecimal_field_alt2_neg -0xa
int16 hexadecimal_field_alt3_neg -0XA

# Octal
int16 octal_field 0o12
int16 octal_field_neg -0o12
int16 octal_field_alt 0O12
int16 octal_field_alt_neg -0O12

---
int16 response

int16 DECIMAL_CONST = 10
int16 DECIMAL_CONST_NEG = -10

# Binary
int16 BINARY_CONST = 0b1010
int16 BINARY_CONST_NEG = -0b1010
int16 BINARY_CONST_ALT = 0B1010
int16 BINARY_CONST_ALT_NEG = -0B1010

# Hexadecimal
int16 HEXADECIMAL_CONST = 0xA
int16 HEXADECIMAL_CONST_NEG = -0xA
int16 HEXADECIMAL_CONST_ALT1 = 0Xa
int16 HEXADECIMAL_CONST_ALT2 = 0xa
int16 HEXADECIMAL_CONST_ALT3 = 0XA
int16 HEXADECIMAL_CONST_ALT1_NEG = -0Xa
int16 HEXADECIMAL_CONST_ALT2_NEG = -0xa
int16 HEXADECIMAL_CONST_ALT3_NEG = -0XA

# Octal
int16 OCTAL_CONST = 0o12
int16 OCTAL_CONST_NEG = -0o12
int16 OCTAL_CONST_ALT = 0O12
int16 OCTAL_CONST_ALT_NEG = -0O12
---
int16[] decimal_field [10, 10]
int16[] decimal_field_neg [-10, -10]

# Binary
int16[] binary_field [0b1010, 0b1010]
int16[] binary_field_neg [-0b1010, -0b1010]
int16[] binary_field_alt [0B1010, 0B1010]
int16[] binary_field_alt_neg [-0B1010, -0B1010]

# Hexadecimal
int16[] hexadecimal_field [0xA, 0xA]
int16[] hexadecimal_field_neg [-0xA, -0xA]
int16[] hexadecimal_field_alt1 [0Xa, 0Xa]
int16[] hexadecimal_field_alt2 [0xa, 0xa]
int16[] hexadecimal_field_alt3 [0XA, 0XA]
int16[] hexadecimal_field_alt1_neg [-0Xa, -0Xa]
int16[] hexadecimal_field_alt2_neg [-0xa, -0xa]
int16[] hexadecimal_field_alt3_neg [-0XA, -0XA]

# Octal
int16[] octal_field [0o12, 0o12]
int16[] octal_field_neg [-0o12, -0o12]
int16[] octal_field_alt [0O12, 0O12]
int16[] octal_field_alt_neg [-0O12, -0O12]

----------------------------------------------------------------------------+++
(source_file (action
  (goal
    (field type: (primitive_type) name: (identifier))
    (field type: (primitive_type) name: (identifier) default: (integer))
    (field type: (primitive_type) name: (identifier) default: (integer))
    ; Binary
    (comment)
    (field type: (primitive_type) name: (identifier) default: (integer))
    (field type: (primitive_type) name: (identifier) default: (integer))
    (field type: (primitive_type) name: (identifier) default: (integer))
    (field type: (primitive_type) name: (identifier) default: (integer))
    ; Hexadecimal
    (comment)
    (field type: (primitive_type) name: (identifier) default: (integer))
    (field type: (primitive_type) name: (identifier) default: (integer))
    (field type: (primitive_type) name: (identifier) default: (integer))
    (field type: (primitive_type) name: (identifier) default: (integer))
    (field type: (primitive_type) name: (identifier) default: (integer))
    (field type: (primitive_type) name: (identifier) default: (integer))
    (field type: (primitive_type) name: (identifier) default: (integer))
    (field type: (primitive_type) name: (identifier) default: (integer))
    ; Binary
    (comment)
    (field type: (primitive_type) name: (identifier) default: (integer))
    (field type: (primitive_type) name: (identifier) default: (integer))
    (field type: (primitive_type) name: (identifier) default: (integer))
    (field type: (primitive_type) name: (identifier) default: (integer)))
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Response ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
  (separator)
  (result
    (field type: (primitive_type) name: (identifier))
    (constant
      type: (primitive_type)
      name: (const_identifier)
      (constant_separator)
      value: (integer))
    (constant
      type: (primitive_type)
      name: (const_identifier)
      (constant_separator)
      value: (integer))
    ; Binary
    (comment)
    (constant
      type: (primitive_type)
      name: (const_identifier)
      (constant_separator)
      value: (integer))
    (constant
      type: (primitive_type)
      name: (const_identifier)
      (constant_separator)
      value: (integer))
    (constant
      type: (primitive_type)
      name: (const_identifier)
      (constant_separator)
      value: (integer))
    (constant
      type: (primitive_type)
      name: (const_identifier)
      (constant_separator)
      value: (integer))
    ; Hexadecimal
    (comment)
    (constant
      type: (primitive_type)
      name: (const_identifier)
      (constant_separator)
      value: (integer))
    (constant
      type: (primitive_type)
      name: (const_identifier)
      (constant_separator)
      value: (integer))
    (constant
      type: (primitive_type)
      name: (const_identifier)
      (constant_separator)
      value: (integer))
    (constant
      type: (primitive_type)
      name: (const_identifier)
      (constant_separator)
      value: (integer))
    (constant
      type: (primitive_type)
      name: (const_identifier)
      (constant_separator)
      value: (integer))
    (constant
      type: (primitive_type)
      name: (const_identifier)
      (constant_separator)
      value: (integer))
    (constant
      type: (primitive_type)
      name: (const_identifier)
      (constant_separator)
      value: (integer))
    (constant
      type: (primitive_type)
      name: (const_identifier)
      (constant_separator)
      value: (integer))
    ; Binary
    (comment)
    (constant
      type: (primitive_type)
      name: (const_identifier)
      (constant_separator)
      value: (integer))
    (constant
      type: (primitive_type)
      name: (const_identifier)
      (constant_separator)
      value: (integer))
    (constant
      type: (primitive_type)
      name: (const_identifier)
      (constant_separator)
      value: (integer))
    (constant
      type: (primitive_type)
      name: (const_identifier)
      (constant_separator)
      value: (integer)))
  (separator)
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; Feedback ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
    (feedback
    (field
      type: (primitive_type)
      type: (array)
      name: (identifier)
      default: (array_value (integer) (integer)))
    (field
      type: (primitive_type)
      type: (array)
      name: (identifier)
      default: (array_value (integer) (integer)))
    ; Binary
    (comment)
    (field
      type: (primitive_type)
      type: (array)
      name: (identifier)
      default: (array_value (integer) (integer)))
    (field
      type: (primitive_type)
      type: (array)
      name: (identifier)
      default: (array_value (integer) (integer)))
    (field
      type: (primitive_type)
      type: (array)
      name: (identifier)
      default: (array_value (integer) (integer)))
    (field
      type: (primitive_type)
      type: (array)
      name: (identifier)
      default: (array_value (integer) (integer)))
    ; Hexadecimal
    (comment)
    (field
      type: (primitive_type)
      type: (array)
      name: (identifier)
      default: (array_value (integer) (integer)))
    (field
      type: (primitive_type)
      type: (array)
      name: (identifier)
      default: (array_value (integer) (integer)))
    (field
      type: (primitive_type)
      type: (array)
      name: (identifier)
      default: (array_value (integer) (integer)))
    (field
      type: (primitive_type)
      type: (array)
      name: (identifier)
      default: (array_value (integer) (integer)))
    (field
      type: (primitive_type)
      type: (array)
      name: (identifier)
      default: (array_value (integer) (integer)))
    (field
      type: (primitive_type)
      type: (array)
      name: (identifier)
      default: (array_value (integer) (integer)))
    (field
      type: (primitive_type)
      type: (array)
      name: (identifier)
      default: (array_value (integer) (integer)))
    (field
      type: (primitive_type)
      type: (array)
      name: (identifier)
      default: (array_value (integer) (integer)))
    ; Binary
    (comment)
    (field
      type: (primitive_type)
      type: (array)
      name: (identifier)
      default: (array_value (integer) (integer)))
    (field
      type: (primitive_type)
      type: (array)
      name: (identifier)
      default: (array_value (integer) (integer)))
    (field
      type: (primitive_type)
      type: (array)
      name: (identifier)
      default: (array_value (integer) (integer)))
    (field
      type: (primitive_type)
      type: (array)
      name: (identifier)
      default: (array_value (integer) (integer))))))
