test/corpus/message.txt
============================================================================+++
Message with Simple Basic Types
============================================================================+++
# Based on: https://github.com/ros2/test_interface_files/blob/rolling/msg/BasicTypes.msg

bool bool_value
byte byte_value
char char_value
float32 float32_value
float64 float64_value
int8 int8_value
uint8 uint8_value
int16 int16_value
uint16 uint16_value
int32 int32_value
uint32 uint32_value
int64 int64_value
uint64 uint64_value

----------------------------------------------------------------------------+++
(source_file
  (comment)
  message: (field
    type: (primitive_type)
    name: (identifier))
  message: (field
    type: (primitive_type)
    name: (identifier))
  message: (field
    type: (primitive_type)
    name: (identifier))
  message: (field
    type: (primitive_type)
    name: (identifier))
  message: (field
    type: (primitive_type)
    name: (identifier))
  message: (field
    type: (primitive_type)
    name: (identifier))
  message: (field
    type: (primitive_type)
    name: (identifier))
  message: (field
    type: (primitive_type)
    name: (identifier))
  message: (field
    type: (primitive_type)
    name: (identifier))
  message: (field
    type: (primitive_type)
    name: (identifier))
  message: (field
    type: (primitive_type)
    name: (identifier))
  message: (field
    type: (primitive_type)
    name: (identifier))
  message: (field
    type: (primitive_type)
    name: (identifier)))

============================================================================+++
Message with Arrays
============================================================================+++
# Based on: https://github.com/ros2/test_interface_files/blob/rolling/msg/Arrays.msg

# Arrays of different types
bool[3] bool_values
byte[3] byte_values
char[3] char_values
float32[3] float32_values
float64[3] float64_values
int8[3] int8_values
uint8[3] uint8_values
int16[3] int16_values
uint16[3] uint16_values
int32[3] int32_values
uint32[3] uint32_values
int64[3] int64_values
uint64[3] uint64_values
string[3] string_values
BasicTypes[3] basic_types_values
Constants[3] constants_values
Defaults[3] defaults_values
bool[3] bool_values_default [false, true, false]
byte[3] byte_values_default [0x01, 1, 255]
char[3] char_values_default [0, 1, 127]
float32[3] float32_values_default [1.125, 0.0, -1.125]
float64[3] float64_values_default [3.1415, 0.0, -3.1415]
int8[3] int8_values_default [0, 127, -128]
uint8[3] uint8_values_default [0, 1, 255]
int16[3] int16_values_default [0, 32767, -32768]
uint16[3] uint16_values_default [0, 1, 65535]
int32[3] int32_values_default [0, 2147483647, -2147483648]
uint32[3] uint32_values_default [0, 1, 4294967295]
int64[3] int64_values_default [0, 9223372036854775807, -9223372036854775808]
uint64[3] uint64_values_default [0, 1, 18446744073709551615]
string[3] string_values_default ["", "max value", "min value"]
# Regression test: check alignment of basic field after an array field is correct
int32 alignment_check

----------------------------------------------------------------------------+++

(source_file
  (comment)
  (comment)
  (field (primitive_type) (array (integer)) (identifier))
  (field (primitive_type) (array (integer)) (identifier))
  (field (primitive_type) (array (integer)) (identifier))
  (field (primitive_type) (array (integer)) (identifier))
  (field (primitive_type) (array (integer)) (identifier))
  (field (primitive_type) (array (integer)) (identifier))
  (field (primitive_type) (array (integer)) (identifier))
  (field (primitive_type) (array (integer)) (identifier))
  (field (primitive_type) (array (integer)) (identifier))
  (field (primitive_type) (array (integer)) (identifier))
  (field (primitive_type) (array (integer)) (identifier))
  (field (primitive_type) (array (integer)) (identifier))
  (field (primitive_type) (array (integer)) (identifier))
  (field (primitive_type (string_type)) (array (integer)) (identifier))
  (field (custom_type) (array (integer)) (identifier))
  (field (custom_type) (array (integer)) (identifier))
  (field (custom_type) (array (integer)) (identifier))
  (field
    (primitive_type) (array (integer))
    (identifier)
    (field_default
        (value (array_value
          (primitive_value (bool))
          (primitive_value (bool))
          (primitive_value (bool))))))
  (field
    (primitive_type) (array (integer))
    (identifier)
    (field_default
        (value (array_value
          (primitive_value (integer))
          (primitive_value (integer))
          (primitive_value (integer))))))
  (field
    (primitive_type) (array (integer))
    (identifier)
    (field_default
        (value (array_value
          (primitive_value (integer))
          (primitive_value (integer))
          (primitive_value (integer))))))
  (field
    (primitive_type) (array (integer))
    (identifier)
    (field_default
        (value (array_value
          (primitive_value (float))
          (primitive_value (float))
          (primitive_value (float))))))
  (field
    (primitive_type) (array (integer))
    (identifier)
    (field_default
        (value (array_value
          (primitive_value (float))
          (primitive_value (float))
          (primitive_value (float))))))
  (field
    (primitive_type) (array (integer))
    (identifier)
    (field_default
        (value (array_value
          (primitive_value (integer))
          (primitive_value (integer))
          (primitive_value (integer))))))
  (field
    (primitive_type) (array (integer))
    (identifier)
    (field_default
        (value (array_value
          (primitive_value (integer))
          (primitive_value (integer))
          (primitive_value (integer))))))
  (field
    (primitive_type) (array (integer))
    (identifier)
    (field_default
        (value (array_value
          (primitive_value (integer))
          (primitive_value (integer))
          (primitive_value (integer))))))
  (field
    (primitive_type) (array (integer))
    (identifier)
    (field_default
        (value (array_value
          (primitive_value (integer))
          (primitive_value (integer))
          (primitive_value (integer))))))
  (field
    (primitive_type) (array (integer))
    (identifier)
    (field_default
        (value (array_value
          (primitive_value (integer))
          (primitive_value (integer))
          (primitive_value (integer))))))
  (field
    (primitive_type) (array (integer))
    (identifier)
    (field_default
        (value (array_value
          (primitive_value (integer))
          (primitive_value (integer))
          (primitive_value (integer))))))
  (field
    (primitive_type) (array (integer))
    (identifier)
    (field_default
        (value (array_value
          (primitive_value (integer))
          (primitive_value (integer))
          (primitive_value (integer))))))
  (field
    (primitive_type) (array (integer))
    (identifier)
    (field_default
        (value (array_value
          (primitive_value (integer))
          (primitive_value (integer))
          (primitive_value (integer))))))
  (field
    (primitive_type (string_type)) (array (integer))
    (identifier)
    (field_default
        (value (array_value
          (primitive_value (string))
          (primitive_value (string))
          (primitive_value (string))))))
  (comment)
  (field (primitive_type) (identifier)))

============================================================================+++
Message with Strings
============================================================================+++
# Based on: https://github.com/ros2/test_interface_files/blob/rolling/msg/Strings.msg

string string_value
string string_value_default1 "Hello world!"
string string_value_default2 "Hello'world!"
string string_value_default3 'Hello"world!'
string string_value_default4 'Hello\'world!'
string string_value_default5 "Hello\"world!"
string STRING_CONST="Hello world!"
string<=22 bounded_string_value
string<=22 bounded_string_value_default1 "Hello world!"
string<=22 bounded_string_value_default2 "Hello'world!"
string<=22 bounded_string_value_default3 'Hello"world!'
string<=22 bounded_string_value_default4 'Hello\'world!'
string<=22 bounded_string_value_default5 "Hello\"world!"

# Based on: https://github.com/ros2/test_interface_files/blob/rolling/msg/WStrings.msg

wstring wstring_value
wstring wstring_value_default1 "Hello world!"
wstring wstring_value_default2 "Hellö wörld!"
wstring wstring_value_default3 "ハローワールド"
#wstring WSTRING_CONST="Hello world!"
#wstring<=22 bounded_wstring_value
#wstring<=22 bounded_wstring_value_default1 "Hello world!"
wstring[3] array_of_wstrings
wstring[<=3] bounded_sequence_of_wstrings
wstring[] unbounded_sequence_of_wstrings

----------------------------------------------------------------------------+++

(source_file
  (comment)
  message: (field
    type: (primitive_type (string_type))
    name: (identifier))
  message: (field
    type: (primitive_type (string_type))
    name: (identifier)
    default: (field_default
      (value (primitive_value (string)))))
  message: (field
    type: (primitive_type (string_type))
    name: (identifier)
    default: (field_default
      (value (primitive_value (string)))))
  message: (field
    type: (primitive_type (string_type))
    name: (identifier)
    default: (field_default
      (value (primitive_value (string)))))
  message: (field
    type: (primitive_type (string_type))
    name: (identifier)
    default: (field_default
      (value (primitive_value (string)))))
  message: (field
    type: (primitive_type (string_type))
    name: (identifier)
    default: (field_default
      (value (primitive_value (string)))))
  message: (constant
    type: (primitive_type (string_type))
    name: (const_identifier)
    value: (primitive_value (string)))
  message: (field
    type: (primitive_type (string_type (integer)))
    name: (identifier))
  message: (field
    type: (primitive_type (string_type (integer)))
    name: (identifier)
    default: (field_default
      (value (primitive_value (string)))))
  message: (field
    type: (primitive_type (string_type (integer)))
    name: (identifier)
    default: (field_default
      (value (primitive_value (string)))))
  message: (field
    type: (primitive_type (string_type (integer)))
    name: (identifier)
    default: (field_default
      (value (primitive_value (string)))))
  message: (field
    type: (primitive_type (string_type (integer)))
    name: (identifier)
    default: (field_default
      (value (primitive_value (string)))))
  message: (field
    type: (primitive_type (string_type (integer)))
    name: (identifier)
    default: (field_default
      (value (primitive_value (string)))))
  (comment)
  message: (field
    type: (primitive_type (string_type))
    name: (identifier))
  message: (field
    type: (primitive_type (string_type))
    name: (identifier)
    default: (field_default
      (value (primitive_value (string)))))
  message: (field
    type: (primitive_type (string_type))
    name: (identifier)
    default: (field_default
      (value (primitive_value (string)))))
  message: (field
    type: (primitive_type (string_type))
    name: (identifier)
    default: (field_default
      (value (primitive_value (string)))))
  (comment)
  (comment)
  (comment)
  message: (field
    type: (primitive_type (string_type))
    type: (array (integer))
    name: (identifier))
  message: (field
    type: (primitive_type (string_type))
    type: (array (integer))
    name: (identifier))
  message: (field
    type: (primitive_type (string_type))
    type: (array)
    name: (identifier)))
