test/corpus/service.txt
============================================================================+++
Service (AddThreeIntsService)
============================================================================+++
# Add ThreeInts Service

int32 ANSWER_TO_LIFE = 42

int32 a
int32 b
@optional
int32 c 0
---
int32 result
int32 SOME_RESPONSE_CONSTANT = 123

----------------------------------------------------------------------------+++
(source_file
  (line_comment)
  (service
  (request
    (constant
      type: (primitive_type)
      name: (const_identifier)
      (constant_separator)
      value: (integer))
    (field type: (primitive_type) name: (identifier))
    (field type: (primitive_type) name: (identifier))
    (field
      (annotation)
      type: (primitive_type)
      name: (identifier)
      default: (integer)))
    (separator)
    (response
      (field type: (primitive_type) name: (identifier))
      (constant
        type: (primitive_type)
        name: (const_identifier)
        (constant_separator)
        value: (integer)))))

============================================================================+++
Parser Test Service
============================================================================+++
#  Copyright 2021 Open Source Robotics Foundation, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
# Taken from:
#   https://github.com/ros2/rosidl/blob/rolling/rosidl_adapter/test/data/srv/Test.srv

# 1
# 2

# 3
bool bool_value
byte byte_value # 4
# 5
char char_value # 6
float32 float32_value
float64 float64_value
int8 int8_value
uint8 uint8_value
int16 int16_value
uint16 uint16_value
int32 int32_value
uint32 uint32_value
int64 int64_value
uint64 uint64_value
string string_value
---
# 7

# 8

bool ok
@optional bool optional_bool

----------------------------------------------------------------------------+++
(source_file
  ; LICENSE
  (line_comment) (line_comment) (line_comment) (line_comment) (line_comment)
  (line_comment) (line_comment) (line_comment) (line_comment) (line_comment)
  (line_comment) (line_comment) (line_comment) (line_comment) (line_comment)
  ; Start
  (line_comment)
  (line_comment)
  (line_comment)
  (service
    (request
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type) name: (identifier))
      (inline_comment)
      (line_comment)
      (field type: (primitive_type) name: (identifier))
      (inline_comment)
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type) name: (identifier))
      (field type: (primitive_type (string_type)) name: (identifier)))
    (separator)
    (line_comment)
    (line_comment)
    (response
      (field type: (primitive_type) name: (identifier))
      (field (annotation) type: (primitive_type) name: (identifier)))))
